# rqx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
benchmarks/: README.md  analyze_b1.py  b10_tls_handshake.py  b1_aiohttp.py  b1_httpr.py  b1_httpx.py  b1_rqx.py  b1_throughput.py  b2_latency.py  b3_connection_pool.py  b4_memory.py  b5_json_parsing.py  b6_retry_overhead.py  b7_network_latency.py  b8_concurrency_sweep.py  b9_payload_sweep.py  delay_server.py  docker-compose.yaml  plot_bench.py  plot_launch.py  run_all.sh  run_b1.sh
benchmarks/0.1.3/: report.md
benchmarks/infra/: .gitignore  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
benchmarks/infra/scripts/: bench.sh  client-setup.sh  run-benches.sh  server-setup.sh
benchmarks/nginx/: generate_payloads.py  nginx-host.conf  nginx.conf  response.json
benchmarks/stream_ab/: Dockerfile  README.md  analysis.py  analyze.py  bench_stream.py  compare.py  comparison.py  configs.py  entrypoint.sh  experiment.py  measure.py  measurement.py  metrics.py  nginx.conf  records.py  report.py  run.py  run_ab.sh  summary.py  tables.py
docs/: launch_report.md  report.md  reqx_project_spec.md
python/reqx/: __init__.py  _types.pyi
python/rqx/: __init__.py  _api.py  _types.pyi
src/: client.rs  exceptions.rs  headers.rs  lib.rs  py_json.rs  query_params.rs  request.rs  response.rs  retry.rs  runtime.rs  stream.rs  timeout.rs  transport.rs  url.rs
src/http/: client.rs  client_builder.rs  mod.rs  protocol.rs  proxy.rs  tls.rs  transport.rs
tests/: conftest.py  generate_certs.sh  test_api.py  test_async.py  test_async_stream_surface.py  test_auth_bearer.py  test_base_url.py  test_compression.py  test_encoding.py  test_exceptions.py  test_headers.py  test_mtls.py  test_response_props.py  test_retry_config.py  test_stream_redirects.py  test_stream_surface.py  test_sync.py  test_timeout.py  tests_async.py  tests_sync.py
tests/ssl/: client_extfile.txt  extfile.txt  generate_certs.sh
