# Cargo.toml
[package]
name = "rqx-core"
version = "0.1.2"
edition = "2024"

[lib]
name = "_rqx"
crate-type = ["cdylib"]

[features]
# pyo3's `extension-module` tells it NOT to link libpython (correct for the
# built wheel, where the host interpreter provides the symbols). Enabled for
# maturin builds via [tool.maturin] `features`, but left OFF by default so
# `cargo test`/`cargo build` link libpython normally and can run the pure-Rust
# unit tests (notably on Linux CI, which has no `-undefined dynamic_lookup`).
extension-module = ["pyo3/extension-module"]

[dependencies]
bytes = "1.11.1"
encoding_rs = "0.8"
futures = "0.3.32"
http = "1.4.0"
mime = "0.3"
pyo3 = { version = "0.28.0" }
pyo3-async-runtimes = { version = "0.28.0", features = ["async-std", "tokio", "tokio-runtime"] }
rand = "0.8"
reqwest = { version = "0.13.2", features = [
    "json", 
    "query", 
    "form", 
    "http2", 
    "cookies", 
    "stream", 
    "gzip", 
    "brotli", 
    "zstd", 
    "deflate"
] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
