[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rqx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "rqx._rqx"
python-source = "python"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "rich",
    "ty",
    "ruff",
    "filelock",
    "maturin>=1.12,<2.0",
]
benchmarks = [
    "numpy",
]

[tool.ty.rules]
"unresolved-import" = "ignore"