[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rqx"
description = "Rust-backed Python HTTP client with an httpx-compatible API."
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rodcochran/rqx"
Repository = "https://github.com/rodcochran/rqx"
Issues = "https://github.com/rodcochran/rqx/issues"
Changelog = "https://github.com/rodcochran/rqx/releases"

[tool.maturin]
module-name = "rqx._rqx"
python-source = "python"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "rich",
    "ty",
    "ruff",
    "filelock",
    "maturin>=1.12,<2.0",
    "brotli",
    "zstandard",
]
benchmarks = [
    "numpy",
]

[tool.ty.rules]
"unresolved-import" = "ignore"